--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,11 +2,11 @@
 <package >
   <metadata>
     <id>Restful.Wiretypes</id>
-    <version>1.0.0.3</version>
+    <version>1.0.0.4</version>
     <authors>Ben Keeping</authors>
     <owners>Ben Keeping</owners>
     <projectUrl>http://github.com/benjaminkeeping/Restful.Wiretypes</projectUrl>
-    <description>Collection of classes supporting the consuming of json services</description>
+    <description>Some classes for rendering forms, links, errors, paging etc over the wire</description>
     <copyright>Copyright Ben Keeping 2012</copyright>
   </metadata>
 </package>
